# cloudflare-auth

./: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.jsonc  wrangler.jsonc.example
.kiro/specs/user-auth/: design.md
.kiro/specs/user-auth/requirements/: requirements.md
.kiro/specs/user-auth/tasks/: base_task.md  bugfix_task.md  tasks.md  user_task.md
docs/: bugfix-verification-code-false-cooldown.md  d1-database-initialization.md  deploy-troubleshooting.md  email-template-solution.md  google-oauth-integration-guide.md  google-oauth-secrets-setup.md  sensitive-data-transmission-and-storage.md  windows-python-workers-setup.md  wrangler-desensitization-deployment-guide.md
migrations/: 0001_init.sql  0002_oauth_accounts_extend.sql  0003_login_history.sql
public/: index.html  login.html  oauth-callback.html  profile.html  register.html
public/scripts/: alert.js  index.js  login.js  oauth-callback.js  profile.js  register.js
public/styles/: common.css
scripts/: deploy.bat
src/: main.py  schema.sql
src/auth/: dependencies.py  email_verification_service.py  models.py  oauth_router.py  oauth_service.py  router.py  service.py
src/core/: config.py  jwt_utils.py  password.py
src/users/: login_history_repository.py  repository.py  router.py
template/: verification-code-email.html
tests/: conftest.py  test_jwt.py  test_models.py  test_password.py
