[project]
name = "cloudflare-auth"
version = "0.1.0"
description = "权限认证服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic==2.10.6",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "pytest>=9.0.2",
    "workers-py",
    "workers-runtime-sdk",
    "fastapi",
    "pydantic",
]
